# norns-sdk-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: design-messaging-client.md  messaging-client-design.md  release-v0.1-checklist.md  remaining-work.md
norns/: __init__.py  agent.py  client.py  models.py
tests/: test_agent.py  test_client.py  test_format.py  test_integration.py  test_schema.py
