[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "norns-sdk"
version = "0.2.0"
description = "Python SDK for Norns — durable agent runtime on BEAM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "litellm>=1.60.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["norns"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
